manifests/ingress-test/10deploy-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: ingress-test
#  labels:
#    app: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 3
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80
