manifests/ingress-test/15service-test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: ingress-test
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
