manifests/ingress-test/20ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - ingress0.k8s.nimb.us.eu.org
    secretName: quickstart-example-tls
  rules:
  - host: ingress0.k8s.nimb.us.eu.org
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: whoami
            port:
              number: 80
