manifests/ingress-test/25ingress-test.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-protected
  namespace: ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

    nginx.ingress.kubernetes.io/auth-url: "https://oauth.ssotest.nimb.us.eu.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.ssotest.nimb.us.eu.org/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    #acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"

spec:
  tls:
    - secretName: whoami-protected-tls
      hosts:
        - whoami.ssotest.nimb.us.eu.org
  rules:
    - host: whoami.ssotest.nimb.us.eu.org
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
